<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.jordi.myapplication.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:weightSum="1"
        android:gravity="center"
        android:foregroundGravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/result"
            android:id="@+id/textView"
            android:textSize="@dimen/activity_result"
            android:gravity="center_vertical|right" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:weightSum="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/seven"
                android:id="@+id/seven"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:weightSum="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eight"
                android:id="@+id/eight"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nine"
                android:id="@+id/nine"
                android:layout_weight="0.81"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/div"
                android:id="@+id/div"
                android:layout_weight="0.81"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:weightSum="1" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/four"
                android:id="@+id/four"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:weightSum="1" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/five"
                android:id="@+id/five"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/six"
                android:id="@+id/six"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mult"
                android:id="@+id/mult"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:weightSum="1" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/one"
                android:id="@+id/one"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:weightSum="1" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:id="@+id/two"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:id="@+id/three"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:id="@+id/minus"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:weightSum="1" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dot"
                android:id="@+id/dot"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:weightSum="1" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:id="@+id/zero"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/equal"
                android:id="@+id/equal"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/plus"
                android:id="@+id/plus"
                android:textSize="@dimen/activity_number_sign" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
